--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,13 @@ dependencies:
 
   shared_preferences: ^0.5.3+4
 
+#  firebase_analytics: ^1.0.4
+#  google_sign_in: ^3.2.4
+#  firebase_core: ^0.4.0
+#  firebase_auth: ^0.11.1+6
+#  cloud_firestore: ^0.12.5
+  firebase_messaging: ^5.0.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
