--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 #  firebase_auth: ^0.11.1+6
 #  cloud_firestore: ^0.12.5
   firebase_messaging: ^5.0.2
+  permission_handler: ^3.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
