--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
 #  cloud_firestore: ^0.12.5
   firebase_messaging: ^5.0.2
   permission_handler: ^3.2.2
+  camera:
+  path_provider:
+  path:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,6 +61,7 @@ flutter:
   assets:
     - assets/get_help.png
     - assets/icon/glasses.png
+    - assets/image-missing.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
