--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
 #  cloud_firestore: ^0.12.5
   firebase_messaging: ^5.0.2
   permission_handler: ^3.2.2
-  camera:
-  path_provider:
-  path:
+  camera: ^0.5.6+1
+  path_provider: ^1.4.0
+  path: ^1.6.4
+  flutter_blue: 0.6.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
