--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Hack Heroes Mobile"
+        android:label="Helpnet"
         android:icon="@mipmap/ic_launcher">
-        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />
+<!--        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="true" />-->
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
